# qa-percruit

./: .env.example  .gitignore  BRANCHING_GUIDE.md  EXAMPLE-PR.md  GETTING_STARTED.md  GIT_USAGE.md  MENTOR_SETUP.md  QUICK_START.md  README.md  REFACTORING_MANUAL_STEPS.md  REFACTORING_SUMMARY.md  TROUBLESHOOTING.md  complete_refactoring.sh  package-lock.json  package.json  rename_files.sh
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/workflows/: ci.yml  codereview.yml  sync-labels.yml
api_tests/: package-lock.json  pyproject.toml
api_tests/tests/: test_sample_api.py
ui_tests/: .env.ex20.template  .env.ex21.template  .env.ex22.template  .env.template  .gitignore  .npmrc  cucumber.js  env. file  package-lock.json  package.json  playwright-debug-professional-timeout-fixed.html  playwright-debug-professional-timeout.html  playwright-debug-professional.html  playwright.config.ts  profile-tabs-outer.html  test-1.spec.ts  test-10.spec.ts  test-16.spec.ts  test-19.spec.ts  test-2.spec.ts  test-20.spec.ts  test-21.spec.ts  test-23.spec.ts  test-3.spec.ts  test-4.spec.ts  test-5.spec.ts  test-7.spec.ts  test-8.spec.ts  test-9.spec.ts  tsconfig.json
ui_tests/docs/: MULTI_EXTERNSHIP_SETUP.md
ui_tests/features/: example.feature  sprint-4-assignments.md
ui_tests/features/Career-Diary/: Career-diary.feature
ui_tests/features/Connect-Messages/: Functionality  Functionality.feature  Messages.feature  (+3 more)
ui_tests/tests/: test-1.spec.ts  test-3.spec.ts  test-4.spec.ts  test-5.spec.ts  test-6.spec.ts  test-7.spec.ts
(+360 files in other folders)
